--- a/style.css
+++ b/style.css
@@ -66,6 +66,8 @@ body{
     font-weight: 400;
     background-color: var(--black-color);
     color: var(--white-color);
+    width: 100%;
+    overflow-x: hidden;
 }
 body::-webkit-scrollbar {
     display: none;
@@ -84,7 +86,7 @@ body::-webkit-scrollbar {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 101;
+    z-index: 404;
     background: var(--black-color);
 }
 
@@ -138,12 +140,13 @@ body::-webkit-scrollbar {
     max-width: 1206px;
     margin: 0px auto;
     padding: 0px 30px;
+    /* overflow-x: hidden; */
 }
 
 
 
 nav{
-    width: 100%;
+    width: 100vw;
     background: rgba(18, 48, 61, 0.5);
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
@@ -186,7 +189,7 @@ nav::after{
     cursor: default;
     font-size: 96px;
     position: absolute;
-
+    text-align: center;
     width: auto;
     min-width: 770px;
     left: 50%;
@@ -251,7 +254,7 @@ nav::after{
 .about-inner{
     display: flex;
     flex-direction: row;
-    height: auto;
+    height: auto;    
     
 }
 .about-left{
@@ -272,32 +275,23 @@ nav::after{
 .about-right{
     opacity: 0;
     width: 500px;
-    position: relative;
-}
+
+} 
 .about-right .photo{
-    width: 500px;
-     clip-path: circle(120px at 250px 340px);
+    height: 800px;
+    clip-path: circle(17% at center center);
 }
-.about-right .photo img:first-child{
+.about-right .photo img{
     position: absolute;
-    bottom: 20px;
-    left: 270px;
-    width: 300px;
+width: 50%;
+    left: 50%;
+    top: 50%;
     transform: translate(-50%,-50%);
 }
 .about-right .photo img:last-child{
-    position: absolute;
-    left: 250px;
-    bottom: 5vw;
-    width: 220px;
-    transform: translate(-50%,-50%);
+    width: 40%;
+    top: 52%;
 }
-@media screen and (min-width:2000px){
-    .about-right .photo img:last-child{
-    bottom:70px;
-    }
-}
-
 .about-right .ufo{
     display: block;
     width: 60%;
@@ -452,6 +446,9 @@ nav::after{
 .skills-list ul li img{
     margin-right: 21px;
 }
+.skills-list ul li img:last-child{
+    margin-right: 0;
+}
 .skills-list ul li img:hover{
     opacity: 0.9;
     animation: stars 1s ease-in-out infinite;
@@ -520,7 +517,7 @@ nav::after{
   }
 
 .contactform{
-    padding-bottom:40vh;
+    padding-bottom:30vh;
     background: rgba(18, 48, 61, 0.5);
     box-shadow: 0px -20px 20px rgba(0, 0, 0, 0.25);
 }
@@ -542,6 +539,7 @@ nav::after{
     column-gap: 20%;
 }
 .contact-inner .form input{
+    color: whitesmoke;
     background: none;
     border: 5px solid #12303D;
     height: 55px;
@@ -554,6 +552,7 @@ nav::after{
     grid-area: b;
 }
 .contact-inner .form textarea{
+    color: whitesmoke;
     grid-area: c;
     background: none;
     border: 5px solid #12303D;
@@ -618,7 +617,7 @@ footer{
 }
 /* end of origin css */
 
-@media only screen and (max-width:1024px){
+@media only screen and (max-width:1023px){
     .wrapper{
         max-width: 1000px;
     margin: 0px auto;
@@ -652,6 +651,9 @@ footer{
     list-style: none;
     text-align: center;
 }
+.burger-menu ul li{
+    margin: 15px 0;
+}
 .burger-menu ul li a{
     color: var(--white-color);
     font-size: 28px;
@@ -667,7 +669,7 @@ footer{
     z-index: 99;
     position: absolute;
     top: 60px;
-    right: 30px;
+    left: 87vw;
     display: block;
     width: 60px;
     height: 60px;
@@ -722,6 +724,149 @@ footer{
     transform: rotateZ(-45deg);
   }
 
+
+
+  .welcome-page h1{
+    font-size: 68px;
+  }
+  .about-right{
+    width: 300px;
+    
+  }
+  /* .about-right .photo{
+    width: 300px;
+     clip-path: circle(95px at center 400px);
+} */
+
+  .about-right .mainlines{
+    background-color: var(--white-color);
+    position: absolute;
+    height: 500px;
+    width: 6px;
+    border-radius: 5px;
+  }
+    .about-right .mainlines:nth-child(2){
+    top: 127px;
+    left: -7px;
+    transform: rotate(15deg);
+    }
+    .about-right .mainlines:nth-child(3){
+    top: 127px;
+    right: -7px;
+    transform: rotate(-15deg);
+    }
+    .about-right .photo{
+        clip-path: circle(15% at center center);
+    }
+    .about-right .photo img {
+    width: 70%;
+    }
+    .about-right .lines{
+        background-color: var(--white-color);
+        position: absolute;
+        width: 7px;
+        height: 90px;
+        border-radius: 5px;
+        opacity: 0.5;
+    }
+    @keyframes ufoline1 {
+        from{ top: 150px;
+            left: 60px;
+        }
+        to{
+            top: 500px;
+            left: -30px;
+        }
+    }
+    @keyframes ufoline2{
+        from{top: 150px;
+            right: 60px;
+        }
+        to{
+            top: 500px;
+            right: -30px;
+        }
+    }
+    @keyframes ufoline3{
+        from{
+            top: 150px;
+        left: 80px;
+        }
+        to{
+            top: 500px;
+            left: 50px;
+        }
+    }
+
+    .skills-list ul li{
+        flex-direction: column;
+    }
+    .skills-list ul li p{
+        text-align: center;
+    }
+    .skills-list ul li .stars{
+        position: initial;
+        margin: 5px auto;
+    }
+    .skills-list ul li::before{
+        display: none;
+    }
+}
+
+@media screen and (max-width:600px) {
+    .inner-nav-burger{
+        height: 70px;
+    }
+    label{
+        left: 85vw;
+        top: 35px;
+        transform: scale(0.5);
+    }
+    .welcome-page h1{
+        font-size: 38px;
+    }
+    .scrolldown-button{
+        width: 40px;
+    }
+    .about-inner{
+        flex-direction: column;
+    }
+    .about-left{
+        width: 95%;
+    }
+    .about-right{
+        width: 95%;
+    }
+    .about-right .photo {
+        height: 600px;
+    }
+    .skills-list{
+        width: 100%;
+    }
+    .works-slider {
+        width: 100%;
+    }
+    .contact-inner .form {
+        grid-template-columns: 1fr;
+    /* grid-template-rows: 10% 10% auto 10%; */
+    grid-template-rows: auto auto auto auto;
+    grid-template-areas: "a"
+                        "b"
+                        "c"
+                        "d";
+    gap: 35px;
+    }
+    .contact-inner .form input{
+        padding: 10px;
+    }
+    .footer-inner{
+        width: 90%;
+        flex-direction: column;
+        align-items: center;
+    }
+    .upwork{
+        margin-top: 25px;
+    }
 }
 
 
