--- a/style.css
+++ b/style.css
@@ -190,22 +190,24 @@ nav::after{
     font-size: 96px;
     position: absolute;
     text-align: center;
-    width: auto;
     min-width: 770px;
     left: 50%;
     top: 50%;
     transform: translate(-50%,-50%);
+    transition: all 0.2s;
 }
 .welcome-page h1 span{
     opacity: 0;
     transition: all 0.4s cubic-bezier(0.06, 0.68, 0.94, 0.38); 
     display: inline-block;
-
+    padding-left: 4px;
    transform: rotate3d(0, 1, 0, 90deg);
+   
 }
 .welcome-page h1 span.welcomePageLetter{
     opacity: 1;
-    transform: rotate3d(0, 1, 0, 0deg)
+    transform: rotate3d(0, 1, 0, 0deg);
+    
 }
 .containeradditional{
     overflow: hidden;
@@ -261,18 +263,22 @@ nav::after{
     width: 50%;
     align-items: center;
     margin: 25% auto;
+    
 }
 .about-left h1{
+    transition: all 0.4s;
     font-weight: 600;
     font-size: 32px;
     text-align: center;
     margin-bottom: 66px;
 }
 .about-left p{
+    transition: all 0.4s;
     font-size: 18px;
     text-align: center;
 }
 .about-right{
+    z-index: -10;
     opacity: 0;
     width: 500px;
 
