--- a/style.css
+++ b/style.css
@@ -187,10 +187,10 @@ nav::after{
 .welcome-page h1{
     font-family: 'Jomhuria';
     cursor: default;
-    font-size: 96px;
+    font-size: 48px;
     position: absolute;
     text-align: center;
-    min-width: 770px;
+    width: 90%;
     left: 50%;
     top: 50%;
     transform: translate(-50%,-50%);
@@ -200,13 +200,14 @@ nav::after{
     opacity: 0;
     transition: all 0.4s cubic-bezier(0.06, 0.68, 0.94, 0.38); 
     display: inline-block;
-    padding-left: 4px;
+    margin: 0 1px;
    transform: rotate3d(0, 1, 0, 90deg);
    
 }
 .welcome-page h1 span.welcomePageLetter{
     opacity: 1;
     transform: rotate3d(0, 1, 0, 0deg);
+    
     
 }
 .containeradditional{
@@ -266,14 +267,14 @@ nav::after{
     
 }
 .about-left h1{
-    transition: all 0.4s;
+    transition: all 0.3s;
     font-weight: 600;
     font-size: 32px;
     text-align: center;
     margin-bottom: 66px;
 }
 .about-left p{
-    transition: all 0.4s;
+    transition: all 0.2s;
     font-size: 18px;
     text-align: center;
 }
@@ -286,7 +287,17 @@ nav::after{
 .about-right .photo{
     height: 800px;
     clip-path: circle(17% at center center);
+    animation: floatingname 1s ease-in-out alternate infinite;
 }
+@keyframes floatingname{
+    from{
+        transform: translateY(-10px);
+    }
+    to{
+        transform: translateY(10px);
+    }
+}
+
 .about-right .photo img{
     position: absolute;
 width: 50%;
@@ -295,10 +306,11 @@ width: 50%;
     transform: translate(-50%,-50%);
 }
 .about-right .photo img:last-child{
-    width: 40%;
+    width: 35%;
     top: 52%;
 }
 .about-right .ufo{
+    z-index: 1;
     display: block;
     width: 60%;
     position: absolute;
@@ -317,7 +329,6 @@ width: 50%;
     height: 700px;
     width: 10px;
     border-radius: 5px;
-
 }
 .about-right .mainlines:nth-child(2){
     top: 210px;
@@ -482,6 +493,7 @@ width: 50%;
     position: fixed;
     left: -100px;
     top: -100px;
+    will-change: auto;
     
 }
 .meteor img{
@@ -516,6 +528,7 @@ width: 50%;
     width: 80%;
     margin: 0 auto;
     padding-bottom:80px;
+    will-change: transform ;
 }
 .swiper{
     width: 100%;
@@ -875,6 +888,47 @@ footer{
     }
 }
 
+@media screen and (max-width:375px) {
+    .welcome-page h1{
+        font-size: 26px;
+    }
+    .about-right .mainlines{
+        height:450px
+    }
+    .about-right .mainlines:nth-child(2),.about-right .mainlines:nth-child(3){
+        top: 102px;
+    }
+
+    @keyframes ufoline1 {
+        from{ top: 110px;
+            left: 60px;
+        }
+        to{
+            top: 450px;
+            left: -30px;
+        }
+    }
+    @keyframes ufoline2{
+        from{top: 110px;
+            right: 60px;
+        }
+        to{
+            top: 450px;
+            right: -30px;
+        }
+    }
+    @keyframes ufoline3{
+        from{
+            top: 110px;
+        left: 80px;
+        }
+        to{
+            top: 450px;
+            left: 50px;
+        }
+    }
+    
+}
 
 
 
