--- a/style.css
+++ b/style.css
@@ -178,6 +178,10 @@ nav::after{
     font-family: 'League Spartan';
     cursor: pointer;
 }
+.inner-nav ul li:nth-child(4){
+    font-weight: 700;
+    font-size: calc(100% + 3px);
+}
 
 .welcome-page{
     height: 100vh;
@@ -237,6 +241,35 @@ nav::after{
     }
 }
 
+.alienmessage{
+    position: fixed;
+    bottom: 0px;
+    left: 35px;
+    width:50px;
+    height: 50px;
+    z-index: 0;
+    transition: all 1s ease-in-out;
+}
+.alienmessage img{
+    filter: invert(99%);
+}
+.alienmessage::after{
+    content: 'try to click on background';
+    border-radius: 10px;
+    text-align: center;
+    font-size: 14px;
+    display:flex;
+    padding: 20px 45px 40px 45px;
+    vertical-align: -50%;
+    justify-content: center;
+    background-color: var(--white-color);
+    color:var(--darkbluewgreen-color);
+    position: absolute;
+    bottom: 40px;
+    left: 50px;
+    -webkit-clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 31% 75%, 0 96%, 9% 75%, 0 75%);
+    clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 31% 75%, 0 96%, 9% 75%, 0 75%);
+}
 
 
 
@@ -637,6 +670,9 @@ footer{
 /* end of origin css */
 
 @media only screen and (max-width:1023px){
+    .alienmessage{
+        display:none ;
+    }
     .wrapper{
         max-width: 1000px;
     margin: 0px auto;
@@ -746,7 +782,7 @@ footer{
 
 
   .welcome-page h1{
-    font-size: 68px;
+    font-size: 42px;
   }
   .about-right{
     width: 300px;
