--- a/style.css
+++ b/style.css
@@ -590,6 +590,67 @@ nav::after {
     margin: 0 auto;
 }
 
+#projects-container{ 
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 20px;
+    justify-content: space-between;
+    padding-bottom: 75px;
+}
+
+#projects-container .project-card{
+    padding: 15px;
+    position: relative;
+    width: 45%;
+    /* border: var(--blue-color) 1px solid; */
+    border-radius: 10px;
+    background: linear-gradient(140deg, rgba(0, 78, 114, 1), rgba(18, 48, 61, 1) 98%);
+}
+
+#projects-container .project-card a{
+    height: 100%;
+    color: white;
+    text-decoration: none;
+    display: flex;
+    flex-direction: column;
+}
+
+.project-card .name{
+    font-size: 1.3rem;
+    font-weight: 600;
+    text-transform: capitalize;
+    margin-bottom: 7px;
+}
+
+.project-card .link{
+    font-size: 0.75rem;
+    text-align: center;
+    padding-top: 20px;
+    margin-top: auto;
+}
+
+.project-card .tags{
+    margin-top: 15px;
+    display: flex;
+    flex-wrap: wrap;
+}
+.project-card .tags li{
+    margin-left: 10px;
+    text-transform: uppercase;
+}
+
+/* #projects-container .project-card::before{
+    content: '123123123';
+    background: fixed;
+    filter: blur(2px);
+    position: absolute;
+    z-index: -2;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+} */
+
 .meteor {
     position: fixed;
     left: -100px;
@@ -628,12 +689,11 @@ nav::after {
 
 }
 
-.works-slider {
+/* .works-slider {
     width: 80%;
     margin: 0 auto;
     padding-bottom: 80px;
-    will-change: transform;
-}
+} */
 
 .swiper {
     width: 100%;
@@ -825,6 +885,7 @@ footer {
 
     .burger-menu ul li {
         margin: 15px 0;
+        cursor: pointer;
     }
 
     .burger-menu ul li a {
@@ -1002,6 +1063,10 @@ footer {
 
     .skills-list ul li::before {
         display: none;
+    }
+
+    #projects-container .project-card{
+        width: 95%;
     }
 }
 
